Drawnscape_Portfolio update01

--- a/index.html
+++ b/index.html
@@ -479,9 +479,9 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://www.youtube.com/watch?v=0jO56hFfsH8" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/" alt="" class="img-fluid">
+                  <img src="assets/img/Screenshot 2024-04-10 011317.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -489,12 +489,12 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                   <div class="col-sm-8">
                     <h2 class="w-title">Drawnscape</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Unity 2D</span> / <span class="w-date">18 Dec. 2023</span>
+                      <span class="w-ctegory">Unity 2D</span> / <span class="w-date">15 Mar. 2024</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details_Drawnscape.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -505,7 +505,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
             <div class="work-box">
               <a href="assets/img/" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/" alt="" class="img-fluid">
+                  <img src="assets/img/s" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -792,7 +792,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>GrandFleet</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>Grandfleet</strong>. All Rights Reserved</p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
@@ -800,7 +800,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
             -->
-              Powered by GrandFleet
+                Powered by GRANDFLEET
             </div>
           </div>
         </div>
