contact info update-2

--- a/index.html
+++ b/index.html
@@ -764,7 +764,8 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                       <ul class="list-ico">
                         <!--<li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>-->
                         <li><span class="bi bi-phone"></span> +880 1979648494</li>
-                        <li><span class="bi bi-envelope"></span> tasifthe2002@gmail.com</li>
+                        <li><span class="bi bi-phone"></span> +880 1850850625</li>
+                        <li><span class="bi bi-envelope"></span> tasif.grandfleet@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
@@ -792,7 +793,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>Grandfleet</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>GRANDFLEET</strong>. All Rights Reserved</p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
