Portfolio_Pic Update

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/183 copy.JPG" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/Potfolio_Pic_V1.png" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
