Optimized and Updated

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Tasif Hossain</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Level Designer,Game Developer, Competitive Programmer, Freelancer"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Level Designer,Game Developer, Competitive Programmer, BDR"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -100,8 +100,8 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Tasif Hossain Emon</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Unity Game Developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>tasifthe2002@gmail.com</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Game Developer | Level Designer</span></p>
+                        <p><span class="title-s">Email: </span> <span>tasif.grandfleet@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>+880 1979648494</span></p>
                       </div>
                     </div>
@@ -149,7 +149,7 @@
                       allowing me to deliver effective solutions.
                     </p>
                     <div class="text-center mt-5">
-                      <a href="assets/CV/Resume of Tasif Hossain Emon.pdf" download class="btn btn-primary btn-lg btn-download">
+                      <a href="assets/CV/CV.pdf" download class="btn btn-primary btn-lg btn-download">
                         <i class="fa fa-download"></i> Download CV
                       </a>
                     </div>                                      
@@ -179,6 +179,72 @@
           </div>
         </div>
         <div class="row">
+          
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-diagram-2-fill"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Programming and Problem-solving</h2>
+                <p class="s-description text-center">
+                  A well-rounded developer, I focus beyond coding to tackle problems head-on. For the past two years, I've honed my competitive programming skills in C/C++, constantly striving to improve my data structures and algorithm knowledge for efficient solutions.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-controller"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Game Development</h2>
+                <p class="s-description text-center">
+                  For the past 4 years, I've delved into Unity game development, mastering core skills like Scriptable Objects for modular code, animation systems for character and world life, game mechanics, UI/UX design, and integrating third-party tools for enhanced functionality.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Level Design & Build</h2>
+                <p class="s-description text-center">
+                  Building on my 4 years in Unity development, I've become a proficient level designer. My skills in advanced techniques like PWG (Procedular World Generation) systems, optimizations, and device porting allow me to craft high-performing games both for Unity and Unreal.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-display"></i><i class="bi bi-palette"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Graphic Design</h2>
+                <p class="s-description text-center">
+                  A design enthusiast, I've sharpened my eye for design principles and honed my skills using Adobe Creative Suite (Photoshop, Illustrator, InDesign) over the past few years. I've tackled branding, marketing, and advertising projects, creating logos, brochures, flyers, and social media graphics.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-brush"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Art</h2>
+                <p class="s-description text-center">
+                  With a lifelong passion for art and a love for creating captivating concepts, I honed my skills in character, environment, and asset design for concept art in video games and films. Adept in digital tools like Photoshop and Krita, I constantly push myself to improve and stay current with the latest trends.
+                </p>
+              </div>
+            </div>
+          </div>
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
@@ -192,93 +258,6 @@
                   field. However, my passion truly lies in game development, 
                   and I have dedicated a significant amount of time towards 
                   learning and improving in this area.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-diagram-2-fill"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Programming and Problem-solving</h2>
-                <p class="s-description text-center">
-                  As a well-rounded developer, I prioritize not only on coding 
-                  but also on sharpening my problem-solving skills. For the past 
-                  two years, I have been honing my competitive programming skills, 
-                  primarily using C/C++. I am constantly striving to improve my 
-                  knowledge of data structures and algorithms to develop more effective 
-                  solutions.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-controller"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Game Development</h2>
-                <p class="s-description text-center">
-                  I have spent the past 4 years honing my skills in Unity game development.
-                  In my Unity game development journey, I have learned and utilized various 
-                  essential skills such as Scriptable Objects, which helped me to make my code 
-                  more modular and reusable. I have also worked with various animation systems to bring life to the game characters and environments. 
-                  Moreover, I have good knowledge of game mechanics, UI/UX design, 
-                  and integrating various third-party tools and plugins to enhance the game's 
-                  functionality.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Level Design & Build</h2>
-                <p class="s-description text-center">
-                  In addition to my extensive 4-year background in Unity development,
-                   I have also acquired valuable experience as a proficient level designer.
-                    My expertise in advanced techniques such as PWG system (Procedural World Gen), optimizations, and device porting have enabled me to optimize game performance while enhancing the overall gaming experience.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-display"></i><i class="bi bi-palette"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Graphic Design</h2>
-                <p class="s-description text-center">
-                  As a creative individual, I have always been interested in graphic design. Over the past few years, I have developed a keen eye for design principles and techniques.
-
-I have experience working with Adobe Creative Suite, including Photoshop, Illustrator, and InDesign. I have created various designs for branding, marketing, and advertising purposes, including logos, brochures, flyers, and social media posts.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-brush"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Art</h2>
-                <p class="s-description text-center">
-                  From a young age, art has been my passion and I have always had a keen 
-                  interest in creating unique and visually appealing concepts. Over time, 
-                  I began to specialize in concept art, which allowed me to develop my skills 
-                  in creating characters, environments, and other assets for various mediums, 
-                  including video games and films. Through my experience in concept art, 
-                  I have become proficient in using digital tools such as Photoshop,Illustrator
-                  and Krita to bring my ideas to life. I am always striving to improve my craft 
-                  and stay up-to-date with the latest techniques and trends in the field.
                 </p>
               </div>
             </div>
@@ -409,7 +388,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
             <div class="work-box">
               <a href="assets/img/PGW_2_FOREST-Compressed.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/PGW_2_FOREST(2).png" alt="" class="img-fluid">
+                  <img src="assets/img/PGW_2_FOREST(2)-min.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
