Optimize Fix update

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <div class="work-box">
               <a href="assets/img/PGWmin_GIF.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/PGW_SS1 (1).jpg" alt="" class="img-fluid">
+                  <img src="assets/img/PGW_Infinite.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -362,7 +362,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/ThirdPersonState-GIF.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/TP_Player_Controller(1).png" alt="" class="img-fluid">
                 </div>
@@ -370,7 +370,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">3rd Person Character controller</h2>
+                    <h2 class="w-title">Third Person Character controller</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Unity 3D</span> / <span class="w-date">11 Oct, 2023</span>
                     </div>
@@ -436,7 +436,7 @@
             <div class="work-box">
               <a href="https://www.youtube.com/watch?v=0jO56hFfsH8" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/Screenshot 2024-04-10 011317.png" alt="" class="img-fluid">
+                  <img src="assets/img/Drawnscape_Front_IMG.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -466,9 +466,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Stunned</h2>
+                    <h2 class="w-title">State Machine Characte Controller</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">3D Procedural Maze</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Character Controller</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
