--- a/portfolio-details_TPC.html
+++ b/portfolio-details_TPC.html
@@ -134,7 +134,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>3rd Person Character Controller(State Machine)</h2>
+              <h2>Third Person Character Controller(State Machine)</h2>
               <p>
                 Tired of clunky character movement in your Unity game? This project is for you!<br>
 
