--- a/portfolio-details_PGW.html
+++ b/portfolio-details_PGW.html
@@ -104,7 +104,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_SS1 (1).jpg" alt="">
+                  <img src="assets/img/PGW_Infinite.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
