Minor Fixes and Optimization

--- a/portfolio-details_Drawnscape.html
+++ b/portfolio-details_Drawnscape.html
@@ -95,25 +95,25 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <img src="assets/img/FeatureGraphic.png" alt="">
+                  <img src="assets/img/FeatureGraphic.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/FeatureGraphic2.png" alt="">
+                  <img src="assets/img/FeatureGraphic2.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/FeatureGraphic_3.png" alt="">
+                  <img src="assets/img/FeatureGraphic_3.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/FeatureGraphic_4.png" alt="">
+                  <img src="assets/img/FeatureGraphic_4.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/FeatureGraphic_5.png" alt="">
+                  <img src="assets/img/FeatureGraphic_5.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/FeatureGraphic_6.png" alt="">
+                  <img src="assets/img/FeatureGraphic_6.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/FeatureGraphic_7_1.png" alt="">
+                  <img src="assets/img/FeatureGraphic_7.webp" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
