--- a/portfolio-details_PGW.html
+++ b/portfolio-details_PGW.html
@@ -104,7 +104,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_Infinite.png" alt="">
+                  <img src="assets/img/PGW_Infinite.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
@@ -127,7 +127,6 @@
                 <li><strong>Category</strong>: Level Design(Unity)</li>
                 <li><strong>Client</strong>: GrandFleet</li>
                 <li><strong>Project date</strong>: 10 July, 2023</li>
-                <!--<li><strong>Project URL</strong>: <a href="https://grand-fleet.itch.io/rawwar" target="_blank">Project Rawwar</a></li>-->
               </ul>
             </div>
             <div class="portfolio-description">
