--- a/portfolio-details_PGW_Forest.html
+++ b/portfolio-details_PGW_Forest.html
@@ -104,21 +104,21 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_2_FOREST(2)-min.png" alt="">
+                  <img src="assets/img/PGW_2_FOREST(2)-min.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_2_FOREST_(1)-min.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/PGW_2_FOREST(3)-min.png" alt="">
+                  <img src="assets/img/PGW_2_FOREST_(1)-min.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_2_FOREST(4)-min.png" alt="">
+                  <img src="assets/img/PGW_2_FOREST(3)-min.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/PGW_2_FOREST(4)-min.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_2_FOREST(5)-min.png" alt="">
+                  <img src="assets/img/PGW_2_FOREST(5)-min.webp" alt="">
                 </div>
 
               </div>
